# et_astlf_control

./: .gitattributes  .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: et_astlf_params.yaml
docs/superpowers/specs/: 2026-07-04-et-astlf-ros2-design.md
et_astlf_path_tracking/: __init__.py  astlf_math.py  error_plotter_node.py  error_plotting.py  et_astlf_controller_node.py  u_path_publisher_node.py
examples/: sample_path.csv
launch/: et_astlf.launch.py  et_astlf_controller.launch.py  et_astlf_with_csv_path.launch.py  u_path_controller.launch.py
src/et_astlf_control/: __init__.py  controller.py  csv_path.py  csv_path_publisher.py  node.py  path_geometry.py
tests/: test_astlf_math.py  test_controller.py  test_controller_imports.py  test_csv_path.py  test_error_plotting.py  test_path_geometry.py
